# rpi4-gpu-crypt

./: CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  bench_runner  cmake_install.cmake
aes256_export/: CMakeLists.txt
aes256_export/include/: aes256_gpu.h
aes256_export/src/backend/: vulkan_ctx.hpp
aes256_export/src/lib/: aes256_gpu.cpp
aes256_export/src/provider/: aes256_provider.c
aes256_export/src/scheduler/: aes256_batcher.cpp  aes256_batcher.hpp
aes256_export/src/shaders/: aes256_ctr.comp
src/backend/: memory.cpp  memory.hpp  vulkan_ctx.cpp
src/provider/: ciphers.c  entrypoint.c
src/scheduler/: aes128_batcher.cpp  aes128_batcher.hpp  batcher.cpp  batcher.hpp
src/shaders/: aes128_ctr.comp  aes_ctr.comp  chacha20.comp  rc4.comp
tests/: bench_runner.cpp  debug_check.sh  test_all_ciphers.sh  test_sbox.sh  verify_real_world.sh
